# secrets-to-paper

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/: publish-pypi.yaml
.github/workflows/: publish-pypi.yaml
secrets_to_paper/: core.py  export.py  generate.py  parse.py
secrets_to_paper/export/: __init__.py  asymmetric.py  gpg.py
secrets_to_paper/generate/: ecc.py  rsa.py
secrets_to_paper/templates/: ecc_key.html  gpg_key.html  main.css  rsa_key.html  secret_output.html
tests/: p  q  test-ec.pem  test-ec.pub  test-payload  test-rsa-4096.pem  test.priv  test.pub  test_keygen.py
