[tool.poetry]
name = "secrets-to-paper"
version = "0.0.1"
description = "A command line tool to help with key-to-paper and paper-to-key."
authors = ["Jared Vacanti <jaredvacanti@gmail.com>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/jaredvacanti/secrets-to-paper"
homepage = "https://github.com/jaredvacanti/secrets-to-paper"

keywords = ['paperkey', 'gpg', 'secrets-to-paper']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
secrets-to-paper = 'secrets_to_paper.core:secrets_to_paper'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
