[tool.poetry]
name = "secrets-to-paper"
version = "0.0.1"
description = "A command line tool to help with key-to-paper and paper-to-key."
authors = ["Jared Vacanti <jaredvacanti@gmail.com>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/jaredvacanti/secrets-to-paper"
homepage = "https://github.com/jaredvacanti/secrets-to-paper"

keywords = ['paperkey', 'gpg', 'secrets-to-paper']

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = {version = "^19.10b0", allow-prereleases = true}
tox = "^3.15.2"

[tool.poetry.scripts]
secrets-to-paper = 'secrets_to_paper.core:secrets_to_paper'
gen-key = 'secrets_to_paper.core:generate_key'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
